--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,30 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Phụ thuộc (Dependencies)
+node_modules/
+jspm_packages/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+# Bản build (Build output)
+dist/
+lib-cov/
+coverage/
+.nyc_output/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# File cấu hình nhạy cảm (Sensitive config)
+config.json
+.env
+auth.json
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# Hệ điều hành (OS files)
 .DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
