feat: add multi Lavalink nodes support with failover - Add support for multiple Lavalink nodes configuration - Add automatic failover when node disconnects - Add /lavalink command to check nodes status - Update /stats command with Lavalink section - Add LavalinkNodeStatus interface for monitoring - Add getLavalinkNodesStatus() function - Reduce log spam (only show successful connections)

--- a/config.example.json
+++ b/config.example.json
@@ -7,8 +7,14 @@
     "lavalink": {
         "nodes": [
             {
-                "name": "Localhost",
+                "name": "Primary",
                 "url": "localhost:2333",
+                "auth": "youshallnotpass",
+                "secure": false
+            },
+            {
+                "name": "Secondary",
+                "url": "localhost:2334",
                 "auth": "youshallnotpass",
                 "secure": false
             }
