feat: add ownerId config and improve lavalink command - Add ownerId to app config for bot owner verification - Update lavalink command to use ownerId from config - Fix lavalink command format (non-inline, tree-style display) - Only bot owner can use /lavalink command - Update README with ownerId in config example

--- a/config.example.json
+++ b/config.example.json
@@ -2,7 +2,8 @@
     "app": {
         "token": "",
         "prefix": "!",
-        "clientId": 0
+        "clientId": 0,
+        "ownerId": ""
     },
     "lavalink": {
         "nodes": [
