--- a/config.example.json
+++ b/config.example.json
@@ -1,31 +1,27 @@
 {
-    "app": {
-        "token": "",
-        "prefix": "!",
-        "clientId": 0,
-        "ownerId": ""
-    },
-    "lavalink": {
-        "nodes": [
-            {
-                "name": "Primary",
-                "url": "localhost:2333",
-                "auth": "youshallnotpass",
-                "secure": false
-            },
-            {
-                "name": "Secondary",
-                "url": "localhost:2334",
-                "auth": "youshallnotpass",
-                "secure": false
-            }
-        ]
-    },
-    "mongodb": {
-        "uri": "mongodb://localhost:27017/animal-music"
-    },
-    "websocket": {
-        "url": "",
-        "secret": ""
-    }
+  "app": {
+    "token": "YOUR_BOT_TOKEN",
+    "prefix": "!",
+    "clientId": 0,
+    "ownerId": "YOUR_DISCORD_USER_ID"
+  },
+  "lavalink": {
+    "nodes": [
+      {
+        "name": "Primary",
+        "url": "localhost:2333",
+        "auth": "youshallnotpass",
+        "secure": false
+      },
+      {
+        "name": "Secondary",
+        "url": "localhost:2334",
+        "auth": "youshallnotpass",
+        "secure": false
+      }
+    ]
+  },
+  "mongodb": {
+    "uri": "mongodb://localhost:27017/animal-music"
+  }
 }
