--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animal-music-client-ts",
-  "version": "2.1.2",
+  "version": "3.0.0",
   "description": "Discord Music Bot - TypeScript with MongoDB",
   "main": "dist/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "@microsoft/signalr": "^8.0.0",
     "discord.js": "^14.14.1",
     "kazagumo": "^3.2.0",
+    "kazagumo-spotify": "^2.1.1",
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^8.0.3",
