--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,46 @@
 # Phụ thuộc (Dependencies)
 node_modules/
 jspm_packages/
+package-lock.json
+yarn.lock
 
 # Bản build (Build output)
 dist/
 lib-cov/
 coverage/
 .nyc_output/
+*.tsbuildinfo
 
 # File cấu hình nhạy cảm (Sensitive config)
-
 .env
+.env.local
+.env.*.local
 auth.json
 config.json
+secrets.json
+
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
 
 # Hệ điều hành (OS files)
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
+
+# Lavalink (nếu có)
+Lavalinknodes/logs/
+Lavalinknodes/*.jar
+Lavalinknodes/plugins/*.jar
+
